@@ -114,6 +114,10 @@
     * 0653 script to extract hw/sw inventory data in csv format...
     * 0655 FIX: win_cpuinfo and mk_inventory.ps1 agent: unit of CPU speed fixed, fixes for long output lines in agent
 
+    check:
+    * 1384 oracle_jobs: new WATO rules, changed service name to SID.OWNER.NAME...
+            NOTE: Please refer to the migration notes!
+
 
 1.2.5i5:
     Core & Setup:
